--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="./styles.css" rel="stylesheet" />
@@ -10,28 +12,146 @@
 </head>
 <body>
     <!--main container-->
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <!--main navigation bar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" id="logo" href="#">Ocin<span class="colored">Design</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <div class="navbar-nav mx-auto" id="linkContainer">
+                  <a class="nav-link" aria-current="page" href="#home">Home</a>
+                  <a class="nav-link" href="#services">Services</a>
+                  <a class="nav-link" href="#about">About</a> 
+                  <a class="nav-link" href="#contact">Contact</a>
+                  <a class="nav-link" href="#work" >Works</a>
                 </div>
               </div>
             </div>
           </nav>
           <!-- end main navbar -->
+          <!-- website banner -->
+            <section class="row" id="home">
+                <div class="col-md-6"></div>
+                <div class="col-md-6 my-auto px-5"><h2><span class="colored">hello! </span>i am freelancer based in USA helping 
+                    people to improve their business by offering design soulutions</h2>
+                <button class="btn btn-warning mt-md-5" style="border-radius: 0;" onclick="window.location='#contact'">Let Chat <i class="fa fa-arrow-right"></i></button>
+                </div>
+            </section>
+         <!--end website banner -->
+         <section class="row py-3 px-5">
+             <div class="col-6 col-md-2">
+                 <h6>need help?</h6>
+                 <p>hoc13dec@gmail.com</p>
+             </div>
+             <div class="col-6 col-md-2">
+                <h6>lets talk?</h6>
+                <p>+1 551-229-5346</p>
+            </div>
+            <div class="col-12 col-md-8 ">
+                <ul class="social-media text-end">
+                    <li><i class="fa fa-linkedin" ></i></li>
+                    <li><i class="fa fa-facebook" ></i></li>
+                    <li><i class="fa fa-instagram" ></i></li>
+                    <li><i class="fa fa-pinterest" ></i></li>
+                </ul>
+            </div>
+         </section>
+         <!-- services    -->
+         <section class="row  py-5" id="services">
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+                <div class="card py-3">
+                    <h1 class="colored p-3"><i class="fa fa-pencil"></i></h1>
+                    <div class="card-body">
+                      <h4 class="card-title">design</h4>
+                      <p class="card-text">we offer all kinds of design services: ADS panels,flyers,business cards,envelopes...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+                <div class="card py-3">
+                    <h1 class="colored p-3"><i class="fa fa-suitcase"></i></h1>
+                    <div class="card-body">
+                      <h4 class="card-title">branding</h4>
+                      <p class="card-text">you found a winning product and you want to start your own branding we are here to help you.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+                <div class="card py-3">
+                    <h1 class="colored p-3"><i class="fa fa-pencil-square-o"></i></h1>
+                    <div class="card-body">
+                      <h4 class="card-title">product design</h4>
+                      <p class="card-text">we understand the importance of product labeling. we can help you to stand out.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+                <div class="card py-3">
+                    <h1 class="colored p-3"><i class="fa fa-code"></i></h1>
+                    <div class="card-body">
+                      <h4 class="card-title">deveopement</h4>
+                      <p class="card-text">you need a website  we can help you to start your business  in less than one week.</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- end services -->
+         <!-- about -->
+         <section class="row py-5 about" id="about">
+            <div class="col-12 col-md-7 px-5">
+                <h3 class="mb-3">about us</h3>
+                <span class="orange-line mb-3"></span>
+                <p>for the last 10 years the e-commerce did not stop growing and competitions becomes harder day after day with all the new people 
+                    getting into this huge market. also the presence of the giant of e-commerce "Amazon" keeps the customers expectetion at hight 
+                level.all of these are keys factors that a successefull enterpreneur keeps in mind.success in the market does require a winning 
+                product only and here is where our role become a key to win. we help our clients to improve their business presence and propose new 
+                hight quality design for their product labeling,social media posts, re-branding which meet the customer expectetions.
+            we help you to stand out in this ocean of sellers</p>
+            </div>
+            <div class="col-12 col-md-5 px-5">
+                <img class="img-fluid" alt="design soulution image" src="./img/pexels-photo-196645.jpeg" style="box-shadow: 2px 2px 5px gray;">
+            </div>
+         </section>
+         <!-- end about -->
+         <section class="contact py-5" id="contact">
+          <div class="row row-content bg-ct-1">
+            <div class="col-12 text-center mb-5">
+                <h1>how to contact us</h1>
+            </div>
+            <div class="col-12 col-sm-4 mx-auto px-4">
+                <h3>ocin design services</h3>
+                <p><h6>Phone: </h6>+1 551 229 5346</p>
+                <p><h6>E-mail: </h6>hoc13dec@gmail.com</p>
+            </div>
+            <div class="col-12 col-sm-4 mx-auto px-4">
+                <form method="POST" action="https://formspree.io/f/xbjqdovp">
+                    <div class="row">
+                            <input type="text" name="name" class="form-control mb-3" placeholder="Name:"> 
+                    </div>
+                    <div class="row">
+                        <input type="email" name="email" class="form-control mb-3" placeholder="E-mail:">
+                    </div>
+                    <div class="row">
+                        <textarea name="message" type="text" class="form-control mb-3" placeholder="message"></textarea>
+                    </div>
+                    <div class="row">
+                        <button  type="submit" style="border-radius: 0;" class="btn btn-warning mb-3" onclick="window.location='#home'">send</button>
+                    </div>
+                </form>
+            </div>
+            </div>
+         </section>
     </div>
     <!--bootstrap javascript files-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    <!-- javascript -->
+    <script src="./script.js"></script>
 </body>
 </html>
