--- a/index.html
+++ b/index.html
@@ -119,6 +119,68 @@
             </div>
          </section>
          <!-- end about -->
+         <!-- works -->
+         <section class="row py-5" id="work">
+             <h2 class="text-center mb-5">works</h2>
+             <!--gallery-->
+            <div class="col-12 col-sm-4 px-4 mb-3 ">
+                <div class="row mb-3">
+                    <div class="col-6  imgFrame">
+                        <img class="img-fluid" src="./img/logo5.PNG">
+                    </div>
+                    <div class="col-6 imgFrame">
+                        <img class="img-fluid" src="./img/logo6.PNG">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 imgFrame">
+                        <img class="img-fluid" src="./img/logo7.PNG">
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 px-4 mb-3 ">
+                <div class="row">
+                    <div class="col-12 imgFrame">
+                        <img class="img-fluid" src="./img/logo8.PNG">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 imgFrame">
+                        <img class="img-fluid" src="./img/logo9.PNG">
+                    </div>
+                    <div class="col-6 imgFrame">
+                        <img class="img-fluid" src="./img/women body.PNG">
+                    </div>
+                </div>
+            
+            </div>
+            <div class="col-12 col-sm-4 px-4 mb-3">
+                <div class="row mb-3">
+                    <div class="col-6 imgFrame">
+                        <img class="img-fluid" src="./img/women face.PNG">
+                    </div>
+                    <div class="col-6 imgFrame">
+                        <img class="img-fluid" src="./img/pexels-photo-590037.jpeg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 imgFrame">
+                        <img class="img-fluid" src="./img/pexels-photo-6214129.jpeg">
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 px-4 mb-3 ">
+                <div class="row">
+                    <div class="col-6 px-3 imgFrame">
+                        <img class="img-fluid" src="./img/pexels-photo-934062.jpeg">
+                    </div>
+                    <div class="col-6 px-3 imgFrame">
+                        <img class="img-fluid" src="./img/pexels-photo-963278.jpeg">
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- end works -->
          <section class="contact py-5" id="contact">
           <div class="row row-content bg-ct-1">
             <div class="col-12 text-center mb-5">
