--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="./styles.css" rel="stylesheet" />
     <title>OcinDesign</title>
 </head>
@@ -35,33 +36,49 @@
           <!-- website banner -->
             <section class="row" id="home">
                 <div class="col-md-6"></div>
-                <div class="col-md-6 my-auto px-5"><h2><span class="colored">hello! </span>i am freelancer based in USA helping 
+                <div  data-aos="fade-left"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease-in-out"
+                data-aos-mirror="true"
+                data-aos-once="false"
+                 class="col-md-6 my-auto px-5"><h2><span class="colored">hello! </span>i am freelancer based in USA helping 
                     people to improve their business by offering design soulutions</h2>
                 <button class="btn btn-warning mt-md-5" style="border-radius: 0;" onclick="window.location='#contact'">Let Chat <i class="fa fa-arrow-right"></i></button>
                 </div>
             </section>
          <!--end website banner -->
-         <section class="row py-3 px-5">
-             <div class="col-6 col-md-2">
-                 <h6>need help?</h6>
-                 <p>hoc13dec@gmail.com</p>
-             </div>
-             <div class="col-6 col-md-2">
-                <h6>lets talk?</h6>
-                <p>+1 551-229-5346</p>
-            </div>
-            <div class="col-12 col-md-8 ">
-                <ul class="social-media text-end">
-                    <li><i class="fa fa-linkedin" ></i></li>
-                    <li><i class="fa fa-facebook" ></i></li>
-                    <li><i class="fa fa-instagram" ></i></li>
-                    <li><i class="fa fa-pinterest" ></i></li>
-                </ul>
-            </div>
-         </section>
+        
          <!-- services    -->
          <section class="row  py-5" id="services">
-            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+            <section class="row py-3 px-5">
+                <div class="col-6 col-md-2">
+                    <h6>need help?</h6>
+                    <p>hoc13dec@gmail.com</p>
+                </div>
+                <div class="col-6 col-md-2">
+                   <h6>lets talk?</h6>
+                   <p>+1 551-229-5346</p>
+               </div>
+               <div class="col-12 col-md-8 ">
+                   <ul class="social-media text-end">
+                       <li><a href="https://www.linkedin.com/in/hocine-abbou-7336bb199/"><i class="fa fa-linkedin" ></i></a></li>
+                       <li><i class="fa fa-facebook" ></i></li>
+                       <li><a href="https://www.instagram.com/ocin_design/"><i class="fa fa-instagram" ></i></a></li>
+                       <li><i class="fa fa-pinterest" ></i></li>
+                   </ul>
+               </div>
+            </section>
+            <div
+            data-aos="fade-up"
+            data-aos-offset="200"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+            data-aos-mirror="true"
+            data-aos-once="false"
+             class="col-10 col-md-3 px-md-5 px-3 mb-2" >
                 <div class="card py-3">
                     <h1 class="colored p-3"><i class="fa fa-pencil"></i></h1>
                     <div class="card-body">
@@ -71,7 +88,14 @@
                 </div>
             </div>
 
-            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2" 
+            data-aos="fade-up"
+            data-aos-offset="200"
+            data-aos-delay="200"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+            data-aos-mirror="true"
+            data-aos-once="false">
                 <div class="card py-3">
                     <h1 class="colored p-3"><i class="fa fa-suitcase"></i></h1>
                     <div class="card-body">
@@ -81,7 +105,14 @@
                 </div>
             </div>
 
-            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2"
+            data-aos="fade-up"
+            data-aos-offset="200"
+            data-aos-delay="300"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+            data-aos-mirror="true"
+            data-aos-once="false">
                 <div class="card py-3">
                     <h1 class="colored p-3"><i class="fa fa-pencil-square-o"></i></h1>
                     <div class="card-body">
@@ -91,7 +122,14 @@
                 </div>
             </div>
 
-            <div class="col-10 col-md-3 px-md-5 px-3 mb-2">
+            <div class="col-10 col-md-3 px-md-5 px-3 mb-2" 
+            data-aos="fade-up"
+            data-aos-offset="200"
+            data-aos-delay="500"
+            data-aos-duration="1000"
+            data-aos-easing="ease-in-out"
+            data-aos-mirror="true"
+            data-aos-once="false">
                 <div class="card py-3">
                     <h1 class="colored p-3"><i class="fa fa-code"></i></h1>
                     <div class="card-body">
@@ -104,7 +142,13 @@
          <!-- end services -->
          <!-- about -->
          <section class="row py-5 about" id="about">
-            <div class="col-12 col-md-7 px-5">
+            <div 
+                data-aos="fade-right"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease-in-out"
+                 class="col-12 col-md-7 px-5">
                 <h3 class="mb-3">about us</h3>
                 <span class="orange-line mb-3"></span>
                 <p>for the last 10 years the e-commerce did not stop growing and competitions becomes harder day after day with all the new people 
@@ -114,41 +158,83 @@
                 hight quality design for their product labeling,social media posts, re-branding which meet the customer expectetions.
             we help you to stand out in this ocean of sellers</p>
             </div>
-            <div class="col-12 col-md-5 px-5">
+            <div 
+            data-aos="fade-left"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease-in-out"
+                 class="col-12 col-md-5 px-5">
                 <img class="img-fluid" alt="design soulution image" src="./img/pexels-photo-196645.jpeg" style="box-shadow: 2px 2px 5px gray;">
             </div>
          </section>
          <!-- end about -->
          <!-- works -->
          <section class="row py-5" id="work">
-             <h2 class="text-center mb-5">works</h2>
+             <h2 
+             data-aos="fade-down"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease-in-out"
+             class="text-center mb-5">works</h2>
              <!--gallery-->
             <div class="col-12 col-sm-4 px-4 mb-3 ">
                 <div class="row mb-3">
-                    <div class="col-6  imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                    class="col-6  imgFrame">
                         <img class="img-fluid" src="./img/logo5.PNG">
                     </div>
-                    <div class="col-6 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 imgFrame">
                         <img class="img-fluid" src="./img/logo6.PNG">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-12 imgFrame">
                         <img class="img-fluid" src="./img/logo7.PNG">
                     </div>
                 </div>
             </div>
             <div class="col-12 col-sm-4 px-4 mb-3 ">
                 <div class="row">
-                    <div class="col-12 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-12 imgFrame">
                         <img class="img-fluid" src="./img/logo8.PNG">
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-6 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 imgFrame">
                         <img class="img-fluid" src="./img/logo9.PNG">
                     </div>
-                    <div class="col-6 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 imgFrame">
                         <img class="img-fluid" src="./img/women body.PNG">
                     </div>
                 </div>
@@ -156,25 +242,51 @@
             </div>
             <div class="col-12 col-sm-4 px-4 mb-3">
                 <div class="row mb-3">
-                    <div class="col-6 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 imgFrame">
                         <img class="img-fluid" src="./img/women face.PNG">
                     </div>
-                    <div class="col-6 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 imgFrame">
                         <img class="img-fluid" src="./img/pexels-photo-590037.jpeg">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-12 imgFrame">
+
                         <img class="img-fluid" src="./img/pexels-photo-6214129.jpeg">
                     </div>
                 </div>
             </div>
             <div class="col-12 px-4 mb-3 ">
                 <div class="row">
-                    <div class="col-6 px-3 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 px-3 imgFrame">
                         <img class="img-fluid" src="./img/pexels-photo-934062.jpeg">
                     </div>
-                    <div class="col-6 px-3 imgFrame">
+                    <div
+                    data-aos="zoom-in"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-6 px-3 imgFrame">
                         <img class="img-fluid" src="./img/pexels-photo-963278.jpeg">
                     </div>
                 </div>
@@ -183,15 +295,30 @@
          <!-- end works -->
          <section class="contact py-5" id="contact">
           <div class="row row-content bg-ct-1">
-            <div class="col-12 text-center mb-5">
+            <div
+             data-aos="slide-down"
+            data-aos-offset="200"
+            data-aos-duration="800"
+            data-aos-easing="ease-in-out"
+             class="col-12 text-center mb-5">
                 <h1>how to contact us</h1>
             </div>
-            <div class="col-12 col-sm-4 mx-auto px-4">
+            <div 
+            data-aos="slide-right"
+            data-aos-offset="200"
+            data-aos-duration="800"
+            data-aos-easing="ease-in-out"  
+            class="col-12 col-sm-4 mx-auto px-4">
                 <h3>ocin design services</h3>
                 <p><h6>Phone: </h6>+1 551 229 5346</p>
                 <p><h6>E-mail: </h6>hoc13dec@gmail.com</p>
             </div>
-            <div class="col-12 col-sm-4 mx-auto px-4">
+            <div
+                     data-aos="slide-left"
+                    data-aos-offset="200"
+                    data-aos-duration="800"
+                    data-aos-easing="ease-in-out"
+                     class="col-12 col-sm-4 mx-auto px-4">
                 <form method="POST" action="https://formspree.io/f/xbjqdovp">
                     <div class="row">
                             <input type="text" name="name" class="form-control mb-3" placeholder="Name:"> 
@@ -215,5 +342,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <!-- javascript -->
     <script src="./script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
